fix scrollbar styles

--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,28 @@
-/* 
 
-::-webkit-scrollbar {
-  display: none !important;
-  -ms-overflow-style: none !important; 
-  scrollbar-width: none !important; 
-} 
-*/
 
 /* Scrollbar */
 ::-webkit-scrollbar {
   width: 7px;
 }
 
-/* Scrollbar Handle */
+/* Dark Mode Scrollbar Handle  */
 ::-webkit-scrollbar-thumb {
-  border-radius: 8px;
+  border-radius: 12px;
   background-color: #2a2d64;
 }
 
-/* Scrollbar Handle on Hover */
+/* Dark Mode Scrollbar Handle on Hover */
 ::-webkit-scrollbar-thumb:hover {
   background-color: #535ac8;
 }
 
-.light-mode {
-  background-color: #000 !important;
-  font-size: 40px !important;
+/* Light Mode Scrollbar Handle  */
+.light-mode ::-webkit-scrollbar-thumb {
+  border-radius: 12px;
+  background-color: #aaa;
+}
+
+/* Light Mode Scrollbar Handle on Hover */
+.light-mode ::-webkit-scrollbar-thumb:hover {
+  background-color: #ccc;
 }
